<resources>
    <string name="app_name">LION RTIS</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="title_activity_detail">DetailActivity</string>
    <string name="title_activity_login">LionMonitoring</string>
    <string name="title_activity_history">HistoryActivity</string>

    <string name="hint_email">Username</string>
    <string name="hint_password">Password</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_register">Register</string>
    <string name="btn_link_to_register">REGISTER</string>
    <string name="btn_link_to_login">Already registred! Login Me.</string>
    <string name="btn_logout">LOGOUT</string>
    <string name="hint_password_again">Confirm Password</string>
    <string name="register">Sign Up</string>
    <string name="description">DESCRIPTION</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Username">Change Username</string>
    <string name="Password">Change Password</string>
    <string name="edit_engine">Edit Process</string>
    <string name="opendrawer">Open</string>
    <string name="closedrawer">close</string>
    <string name="edit_station">Edit Station</string>
    <string name="station">STATION</string>
    <string name="cancel">Cancel</string>
    <string name="done">DONE</string>
    <string name="parameter">Parameter</string>
    <string name="process">Process</string>
    <string name="processname">PROCESSNAME</string>
</resources>
