<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_editmcname"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    tools:context="com.example.kuybeer26092016.lionmonitoringdemo.activitys.EditprocessActivity">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="3"
        android:background="#EEEEEE">

        <Button
            android:text="@string/cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/XML_Btn_cancel"
            android:background="#EEEEEE"
            android:layout_weight="1" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/process"
            android:gravity="center"
            android:textSize="18dp"
            android:textColor="#333"
            android:layout_marginBottom="3dp"
            android:textStyle="bold"
            android:background="#EEEEEE"
            android:layout_weight="1" />
        <Button
            android:id="@+id/XML_btnchange"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#EEEEEE"
            android:text="@string/done" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#E0E0E0">

    </View>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:weightSum="3">

        <ImageView
            android:id="@+id/XML_ic_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:src="@drawable/ic_name"
            android:contentDescription=""
            tools:ignore="ContentDescription" />
        <EditText
            android:layout_marginStart="5dp"
            android:id="@+id/XML_Process_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:lines="1"
            android:layout_marginLeft="5dp"
            android:inputType="" />

        <ImageView
            android:id="@+id/XML_Ic_cancel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:src="@drawable/ic_cancel" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/parameter"
            android:gravity="center"
            android:textSize="18dp"
            android:textColor="#333"
            android:layout_marginBottom="3dp"
            android:textStyle="bold"
            android:background="#EEEEEE"
            android:layout_weight="1" />

        <ProgressBar
            android:id="@+id/XML_Pgeditstation"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/XML_RecyclerViewParameter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#EEEEEE">

        </android.support.v7.widget.RecyclerView>
    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/XML_Fub"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        app:fabSize="auto"
        android:clickable="true"
        app:srcCompat="@drawable/ic_plus" />
</LinearLayout>
